--- a/public/style.css
+++ b/public/style.css
@@ -77,3 +77,30 @@
 #success p{
   padding-top: 200px;
 }
+#invalidlogin {
+    margin:30px;
+    padding:20px;
+    background-color:#FFEEEE;
+    border: 2px red solid;
+    border-radius:4px;
+}
+
+#emailwarning {
+    font-weight:bold;
+    color:red;
+    text-align:left;
+    margin-left:7.5%;
+    margin-bottom:-15px;
+}
+
+#passwarning {
+    font-weight:bold;
+    color:red;
+    text-align:left;
+    margin-left:7.5%;
+    margin-bottom:-15px;
+}
+
+.submitinactive {
+    background-color:gray;
+}
